--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -175,6 +175,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:clipToPadding="false"
             android:paddingBottom="14dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
